# phase-5

./: README.md  black.toml  mypy.ini  pyproject.toml  requirements.txt  run.bat
history/prompts/001-phase5-cloud/: 001-phase5-kickoff.spec.prompt.md  004-phase5-implementation-kickoff.tasks.prompt.md
history/prompts/general/: 002-create-constitution.constitution.prompt.md  003-fix-sp-specify.misc.prompt.md
k8s/base/dapr-components/: appconfig.yaml  kafka-pubsub.yaml  kubernetes-secrets.yaml  statestore.yaml
specs/001-phase5-cloud/: plan.md  spec.md  tasks.md
specs/001-phase5-cloud/checklists/: requirements.md
src/api/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
src/api/consumers/: __init__.py
src/api/dapr/: __init__.py  client.py  jobs.py  publisher.py  secrets.py  state.py
src/api/db/: __init__.py  connection.py
src/api/models/: __init__.py  base.py  task.py
src/api/routes/: __init__.py  health.py  tasks.py
src/api/schemas/: __init__.py  task.py
src/api/services/: __init__.py  task_service.py
