[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase5-todo-app"
version = "1.0.0"
description = "Phase V: Advanced Cloud Deployment - Todo App with Kafka and Dapr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9; python_version < '3.13'",
    "psycopg-binary>=3.2.0; python_version >= '3.13'",
    "asyncpg>=0.30.0; python_version >= '3.13'",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "black>=24.1.1",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
